[gd_scene load_steps=9 format=3 uid="uid://vd7q7f24un2d"]

[ext_resource type="Texture2D" uid="uid://bxv0u4xwytcvp" path="res://party-popper.png" id="1_4d0g1"]
[ext_resource type="Script" path="res://scripts/StarRatingSystem.gd" id="1_ln46n"]
[ext_resource type="Texture2D" uid="uid://bbo3qanoswq3v" path="res://ribbon.png" id="2_hnft2"]
[ext_resource type="Texture2D" uid="uid://cawhejr4ljidh" path="res://Back Square Button.png" id="3_j7mhh"]
[ext_resource type="Texture2D" uid="uid://bi6lsllfvp3gb" path="res://Home Square Button.png" id="4_d5mje"]
[ext_resource type="Texture2D" uid="uid://ctnsctaaqiq66" path="res://Next Square Button.png" id="5_dbde1"]
[ext_resource type="PackedScene" uid="uid://cyx4xdqx12u1m" path="res://gui/star_container.tscn" id="7_x0lol"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g5gfi"]
bg_color = Color(0.898039, 0.827451, 0.701961, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.588235, 0.588235, 0.588235, 1)

[node name="Control" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 0
offset_left = 338.0
offset_top = 26.0
offset_right = 870.0
offset_bottom = 592.0
script = ExtResource("1_ln46n")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_g5gfi")

[node name="Party popper2" type="TextureRect" parent="Panel"]
texture_filter = 1
layout_mode = 0
offset_left = -168.0
offset_top = 134.0
offset_right = -14.0
offset_bottom = 282.0
rotation = -1.57674
texture = ExtResource("1_4d0g1")
expand_mode = 2

[node name="Ribbon" type="Sprite2D" parent="Panel"]
texture_filter = 1
position = Vector2(265, 73)
scale = Vector2(1.18359, 1)
texture = ExtResource("2_hnft2")

[node name="Label" type="Label" parent="Panel"]
texture_filter = 1
layout_mode = 0
offset_left = 110.0
offset_top = 30.0
offset_right = 410.0
offset_bottom = 83.0
theme_override_font_sizes/font_size = 30
text = "Congratulations"
horizontal_alignment = 1

[node name="party popper1" type="TextureRect" parent="Panel"]
texture_filter = 1
layout_mode = 0
offset_left = 554.0
offset_top = -18.0
offset_right = 708.0
offset_bottom = 130.0
texture = ExtResource("1_4d0g1")
expand_mode = 2

[node name="Control4" type="Control" parent="Panel"]
layout_mode = 3
anchors_preset = 0
offset_left = 212.0
offset_top = 442.0
offset_right = 300.0
offset_bottom = 528.0

[node name="stage button" type="Button" parent="Panel/Control4"]
process_mode = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("4_d5mje")
flat = true
expand_icon = true

[node name="Control3" type="Control" parent="Panel"]
layout_mode = 3
anchors_preset = 0
offset_left = 402.0
offset_top = 452.0
offset_right = 490.0
offset_bottom = 538.0

[node name="nextlvl" type="Button" parent="Panel/Control3"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("5_dbde1")
flat = true
expand_icon = true

[node name="Control2" type="Control" parent="Panel"]
layout_mode = 3
anchors_preset = 0
offset_left = 32.0
offset_top = 442.0
offset_right = 120.0
offset_bottom = 528.0

[node name="previouslvl" type="Button" parent="Panel/Control2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
icon = ExtResource("3_j7mhh")
flat = true
expand_icon = true

[node name="starContainer" parent="." instance=ExtResource("7_x0lol")]
layout_mode = 1
offset_top = -73.5
offset_bottom = 73.5

[connection signal="pressed" from="Panel/Control4/stage button" to="." method="_on_stage_button_pressed"]
[connection signal="pressed" from="Panel/Control3/nextlvl" to="." method="_on_next_lvl_pressed"]
[connection signal="pressed" from="Panel/Control2/previouslvl" to="." method="_on_previouslvl_pressed"]
